perbaikan public url

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:xP30/9eKg++yIHEAx6f97AiZTMjO1aY97lGKpxe/GiU=
 APP_DEBUG=false
 APP_TIMEZONE=Asia/Singapore
