bug fix, dan menambah fitur baru

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 APP_DEBUG=true
+APP_NAME=StokOpname
 APP_ENV=local
 APP_KEY=base64:PGO3LOyj3we3HGY3hQdMkBtSYgJieAK14wmF1BZ68Es=
-APP_TIMEZONE=Asia/Singapore
+APP_TIMEZONE=Asia/Makassar
 APP_URL=http://localhost:8000
 
 APP_LOCALE=en
